Small changes: Fixed horizontal scroll-bar showing up after closing a basicgrid photo Changed href from Our Work page from './event?something' to './event.html?something' Fixed logo sticking to the top after the window resized from mobile to desktop Slightly shrinked header on mobile devices, from 13vh to 10vh height

--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -43,8 +43,8 @@ header a:hover {
 
 @media (max-width: 750px) {
     cover {
-        height: 87vh;
-        margin-top: 12vh;
+        height: 90vh;
+        margin-top: 10vh;
     }
 }
 
